--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,14 +1,32 @@
+bcrypt==4.2.0
+cffi==1.17.1
 contourpy==1.3.0
+cryptography==43.0.3
 cycler==0.12.1
+filelock==3.13.1
 fonttools==4.53.1
+fsspec==2024.2.0
 importlib==1.0.4
+Jinja2==3.1.3
 kiwisolver==1.4.7
+MarkupSafe==2.1.5
 matplotlib==3.9.2
+mpmath==1.3.0
+networkx==3.2.1
 numpy==2.1.1
 packaging==24.1
+paramiko==3.5.0
 pillow==10.4.0
+pycparser==2.22
+PyNaCl==1.5.0
 pyparsing==3.1.4
 python-dateutil==2.9.0.post0
 scipy==1.14.1
+setuptools==70.0.0
 six==1.16.0
+sympy==1.13.1
+torch==2.5.1+cpu
+torchaudio==2.5.1+cpu
+torchvision==0.20.1+cpu
 tornado==6.4.1
+typing_extensions==4.9.0
