--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,11 +1,14 @@
 bcrypt==4.2.0
+certifi==2024.8.30
 cffi==1.17.1
+charset-normalizer==3.4.0
 contourpy==1.3.0
 cryptography==43.0.3
 cycler==0.12.1
 filelock==3.13.1
 fonttools==4.53.1
 fsspec==2024.2.0
+idna==3.10
 importlib==1.0.4
 Jinja2==3.1.3
 kiwisolver==1.4.7
@@ -21,6 +24,7 @@ pycparser==2.22
 PyNaCl==1.5.0
 pyparsing==3.1.4
 python-dateutil==2.9.0.post0
+requests==2.32.3
 scipy==1.14.1
 setuptools==70.0.0
 six==1.16.0
@@ -30,3 +34,4 @@ torchaudio==2.5.1+cpu
 torchvision==0.20.1+cpu
 tornado==6.4.1
 typing_extensions==4.9.0
+urllib3==2.2.3
