--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,3 +1,4 @@
+attrs==24.2.0
 bcrypt==4.2.0
 certifi==2024.8.30
 cffi==1.17.1
@@ -5,27 +6,36 @@ charset-normalizer==3.4.0
 contourpy==1.3.0
 cryptography==43.0.3
 cycler==0.12.1
+fastjsonschema==2.20.0
 filelock==3.13.1
 fonttools==4.53.1
 fsspec==2024.2.0
 idna==3.10
 importlib==1.0.4
 Jinja2==3.1.3
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter_core==5.7.2
 kiwisolver==1.4.7
 MarkupSafe==2.1.5
 matplotlib==3.9.2
 mpmath==1.3.0
+nbformat==5.10.4
 networkx==3.2.1
 numpy==2.1.1
 packaging==24.1
 paramiko==3.5.0
 pillow==10.4.0
+platformdirs==4.3.6
 pycparser==2.22
 PyNaCl==1.5.0
 pyparsing==3.1.4
 python-dateutil==2.9.0.post0
+referencing==0.35.1
 requests==2.32.3
+rpds-py==0.21.0
 scipy==1.14.1
+scp==0.15.0
 setuptools==70.0.0
 six==1.16.0
 sympy==1.13.1
@@ -33,5 +43,6 @@ torch==2.5.1+cpu
 torchaudio==2.5.1+cpu
 torchvision==0.20.1+cpu
 tornado==6.4.1
+traitlets==5.14.3
 typing_extensions==4.9.0
 urllib3==2.2.3
