--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,5 @@
 [submodule "python/SigProc_Comm"]
 	path = python/SigProc_Comm
-	url = git@github.com:ali-rasteh/SigProc_Comm.git
+	# url = git@github.com:ali-rasteh/SigProc_Comm.git
+	url = https://github.com/ali-rasteh/SigProc_Comm.git
 	branch = main
