--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,48 +1,69 @@
-attrs==24.2.0
-bcrypt==4.2.0
-certifi==2024.8.30
+annotated-types==0.7.0
+attrs==25.1.0
+bcrypt==4.2.1
+certifi==2025.1.31
 cffi==1.17.1
-charset-normalizer==3.4.0
-contourpy==1.3.0
-cryptography==43.0.3
+charset-normalizer==3.4.1
+contourpy==1.3.1
+cryptography==44.0.0
 cycler==0.12.1
-fastjsonschema==2.20.0
-filelock==3.13.1
-fonttools==4.53.1
-fsspec==2024.2.0
+fastjsonschema==2.21.1
+filelock==3.17.0
+fonttools==4.56.0
+fsspec==2025.2.0
 idna==3.10
-importlib==1.0.4
-Jinja2==3.1.3
+Jinja2==3.1.5
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 jupyter_core==5.7.2
-kiwisolver==1.4.7
-MarkupSafe==2.1.5
-matplotlib==3.9.2
+kiwisolver==1.4.8
+MarkupSafe==3.0.2
+matplotlib==3.10.0
 mpmath==1.3.0
 nbformat==5.10.4
-networkx==3.2.1
-numpy==2.1.1
-packaging==24.1
-paramiko==3.5.0
-pillow==10.4.0
+nest-asyncio==1.6.0
+networkx==3.4.2
+numpy==2.2.2
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-cusparselt-cu12==0.6.2
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
+packaging==24.2
+paramiko==3.5.1
+pillow==11.1.0
 platformdirs==4.3.6
 pycparser==2.22
+pydantic==2.10.6
+pydantic_core==2.27.2
 PyNaCl==1.5.0
-pyparsing==3.1.4
+pynq==3.0.1
+pynqmetadata==0.1.5
+pynqutils==0.1.1
+pyparsing==3.2.1
 python-dateutil==2.9.0.post0
-referencing==0.35.1
+python-magic==0.4.27
+referencing==0.36.2
 requests==2.32.3
-rpds-py==0.21.0
-scipy==1.14.1
+rpds-py==0.22.3
+scipy==1.15.1
 scp==0.15.0
-setuptools==70.0.0
-six==1.16.0
+setuptools==75.8.0
+six==1.17.0
 sympy==1.13.1
-torch==2.5.1+cpu
-torchaudio==2.5.1+cpu
-torchvision==0.20.1+cpu
-tornado==6.4.1
+torch==2.6.0
+torchaudio==2.6.0
+torchvision==0.21.0
+tqdm==4.67.1
 traitlets==5.14.3
-typing_extensions==4.9.0
-urllib3==2.2.3
+triton==3.2.0
+typing_extensions==4.12.2
+urllib3==2.3.0
